@@ -71,6 +71,8 @@ require 'lobbyist/workflow_system'
 
 # Library V2
 require 'lobbyist/v2/base'
+require 'lobbyist/v2/account_level'
+require 'lobbyist/v2/appointment'
 require 'lobbyist/v2/authorization'
 require 'lobbyist/v2/category'
 require 'lobbyist/v2/company_metrics'
@@ -80,6 +82,7 @@ require 'lobbyist/v2/company_transaction'
 require 'lobbyist/v2/company_user'
 require 'lobbyist/v2/company'
 require 'lobbyist/v2/contact'
+require 'lobbyist/v2/customer_call_credit_metrics'
 require 'lobbyist/v2/customer_call_credit'
 require 'lobbyist/v2/customer_call_metrics'
 require 'lobbyist/v2/customer_call'
@@ -91,9 +94,16 @@ require 'lobbyist/v2/enterprise_metrics'
 require 'lobbyist/v2/enterprise_setting'
 require 'lobbyist/v2/enterprise_user'
 require 'lobbyist/v2/enterprise'
+require 'lobbyist/v2/handwritten_review_metrics'
+require 'lobbyist/v2/handwritten_review'
 require 'lobbyist/v2/private_feedback_topic'
 require 'lobbyist/v2/promo'
+require 'lobbyist/v2/review_challenge'
+require 'lobbyist/v2/review_comment'
+require 'lobbyist/v2/review_metrics'
 require 'lobbyist/v2/review_topic'
+require 'lobbyist/v2/review_withdrawal_request'
+require 'lobbyist/v2/review'
 require 'lobbyist/v2/scotty_setting'
 require 'lobbyist/v2/smart_invite_setting'
 require 'lobbyist/v2/summary'
