@@ -1,3 +1,4 @@
+* Added Review Metrics proxy model for V2 API.
 * Added Customer Call proxy model for V2 API.
 
 === 0.5.8 2014-05-28
